--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,17 @@
-body {
-  background-color: bisque;
+* {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+#documentList {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.filmCard {
+  width: 100px;
+  margin: 10px;
+  padding: 0px 20px;
+  padding-bottom: 10px;
+  background-color: rgb(185, 185, 185);
+  border-radius: 10px;
 }
